--- a/app/src/main/res/layout/item_home_pager_content.xml
+++ b/app/src/main/res/layout/item_home_pager_content.xml
@@ -6,6 +6,7 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
     <ImageView
+        android:layout_marginLeft="5dp"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:id="@+id/goods_cover"
