--- a/app/src/main/res/layout/fragment_selected.xml
+++ b/app/src/main/res/layout/fragment_selected.xml
@@ -2,13 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+        <RelativeLayout
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+            <TextView
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_width="wrap_content"
+                android:text="@string/text_selected_title"
+                android:layout_height="wrap_content"/>
 
-        android:layout_gravity="center"
-        android:text="This is Recommand View"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
-    </TextView>
 
+
+        </RelativeLayout>
+    <LinearLayout
+        android:background="@color/color_EFEEEEE_selected"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:background="@color/white"
+            android:id="@+id/left_cagegories"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/right_content"/>
+        
+    </LinearLayout>
 </LinearLayout>
