--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorGrey">#7B7B7B</color>
     <color name="colorTabSelected">#ffffff</color>
     <color name="colorTabNormal">#aaffffff</color>
-    <color name="color_tmall">#D0021B</color>
+    <color name="colorTmall">#D0021B</color>
     <color name="colorPageBg">#efeeee</color>
+    <color name="color_EFEEEEE_selected">#EFEEEE</color>
 </resources>
