添加特惠界面,实现下拉刷新加载更多

--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -51,6 +51,8 @@
     </RelativeLayout>
 
     <EditText
+        android:ellipsize="end"
+        android:maxLines="3"
         android:editable="false"
         android:id="@+id/ticket_code"
         android:textColor="#4A4A4A"
