添加历史记录TextFlowLayout自定义控件

--- a/app/src/main/res/layout/fragment_serarch.xml
+++ b/app/src/main/res/layout/fragment_serarch.xml
@@ -2,13 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
 
+<!--    历史记录-->
+<!--    推荐关键字-->
+<!--    搜索结果-->
+    <com.example.taobaou.ui.custom.TextFlowLayout
+        android:id="@+id/textflow_tfl"
         android:layout_gravity="center"
-        android:text="This is Search View"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </TextView>
+    </com.example.taobaou.ui.custom.TextFlowLayout>
 
 </LinearLayout>
