--- a/app/src/main/res/layout/base_home_fragment_layout.xml
+++ b/app/src/main/res/layout/base_home_fragment_layout.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"/>
 
         <EditText
+            android:focusable="false"
             android:background="@drawable/shape_edit_box_bg"
             android:hint="@string/text_search_tips"
             android:layout_marginLeft="10dp"
