将搜索界面完善,可以实现点击搜索热词和历史记录进行搜索

--- a/app/src/main/res/layout/base_home_fragment_layout.xml
+++ b/app/src/main/res/layout/base_home_fragment_layout.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"/>
 
         <EditText
+            android:id="@+id/home_search_input_box"
             android:focusable="false"
             android:background="@drawable/shape_edit_box_bg"
             android:hint="@string/text_search_tips"
