--- a/app/src/main/res/layout/fragment_serarch.xml
+++ b/app/src/main/res/layout/fragment_serarch.xml
@@ -1,17 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:sob="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 <!--    历史记录-->
-<!--    推荐关键字-->
-<!--    搜索结果-->
-    <com.example.taobaou.ui.custom.TextFlowLayout
-        android:id="@+id/textflow_tfl"
-        android:layout_gravity="center"
+    <LinearLayout
+        android:id="@+id/search_histories_container"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <RelativeLayout
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="14sp"
+                android:text="@string/text_search_history"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:id="@+id/search_delete_histories"
+                android:layout_alignParentRight="true"
+                android:src="@mipmap/delete_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
 
-    </com.example.taobaou.ui.custom.TextFlowLayout>
+        <com.example.taobaou.ui.custom.TextFlowLayout
+            android:id="@+id/search_history_view"
+            android:layout_width="match_parent"
+            sob:horizontalSpace="12dp"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+<!--    推荐关键字-->
+    <LinearLayout
+        android:id="@+id/serach_recommend_container"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="14sp"
+                android:text="@string/text_serarch_recommend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+
+        <com.example.taobaou.ui.custom.TextFlowLayout
+            android:id="@+id/search_recommed_view"
+            android:layout_width="match_parent"
+            sob:horizontalSpace="12dp"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+<!--    搜索结果-->
+    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+        android:id="@+id/search_result_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_result_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
+
 
 </LinearLayout>
