--- a/app/src/main/res/layout/item_liner_goods_content.xml
+++ b/app/src/main/res/layout/item_liner_goods_content.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:gravity="center_vertical"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     android:orientation="horizontal">
     <ImageView
         android:layout_marginLeft="5dp"
