集成了百度识图SDK,简单的登录注册功能

--- a/app/src/main/res/layout/fragment_search_bar_layout.xml
+++ b/app/src/main/res/layout/fragment_search_bar_layout.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp">
         <EditText
+            android:saveEnabled="false"
             android:singleLine="true"
             android:imeOptions="actionSearch"
             android:id="@+id/search_input_box"
