--- a/app/src/main/res/layout/item_liner_goods_content.xml
+++ b/app/src/main/res/layout/item_liner_goods_content.xml
@@ -12,7 +12,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:id="@+id/goods_cover"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/image"
         ></ImageView>
     <LinearLayout
         android:layout_marginLeft="10dp"
