--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,64 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".ui.activity.TestActivity">
-
-
-    <RadioGroup
-        android:id="@+id/test_navigation_bar"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
+<Button
+    android:text="使用Sp保存数据"
+    android:id="@+id/btn_test_sp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+    <Button
+        android:text="使用sp获得数据"
+        android:id="@+id/btn_test_sp_get"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RadioButton
-            android:id="@+id/test_home"
-            android:textColor="@drawable/navigation_bar_color"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:button="@null"
-            android:text="首页"
-            android:drawableTop="@drawable/selector_navigation_home"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <RadioButton
-            android:id="@+id/test_red_packet"
-            android:textColor="@drawable/navigation_bar_color"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:button="@null"
-            android:text="特惠"
-            android:drawableTop="@drawable/selector_navigation_red_package"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <RadioButton
-            android:id="@+id/test_selected"
-            android:textColor="@drawable/navigation_bar_color"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:button="@null"
-            android:text="精选"
-            android:drawableTop="@drawable/selector_navigation_selected"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <RadioButton
-            android:id="@+id/test_search"
-            android:textColor="@drawable/navigation_bar_color"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:button="@null"
-            android:text="搜索"
-            android:drawableTop="@drawable/selector_navigation_search"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-
-    </RadioGroup>
-
-    <View
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:hint="显示数据"
+        android:id="@+id/tv_test_show_message"
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_above="@+id/test_navigation_bar"
-        android:background="@color/gray"/>
-</RelativeLayout>
+        android:layout_height="wrap_content"/>
+
+
+</LinearLayout>
