--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -110,4 +110,15 @@
         android:layout_marginEnd="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <Button
+        android:textSize="18sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:id="@+id/btn_register_face_register"
+        android:background="@drawable/bg_my_info_btn_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="人脸注册" />
 </LinearLayout>
