--- a/app/src/main/res/layout/item_ticket_history.xml
+++ b/app/src/main/res/layout/item_ticket_history.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
     <ImageView
         android:id="@+id/iv_ticket_history"
-        android:src="@mipmap/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="72dp"
+        android:layout_height="60dp"
+        android:src="@mipmap/image" />
     <TextView
         android:id="@+id/tv_ticket_history"
         android:gravity="center"
