人脸识别集成(一)

--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -38,47 +38,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_myInfo_Image" />
+
     <TextView
-        android:visibility="gone"
-        android:text="这是我的领券历史"
-        android:textSize="18sp"
-        android:background="@drawable/bg_my_card_search_history"
         android:id="@+id/tv_myInfo_coupon_history"
-        app:layout_constraintTop_toBottomOf="@id/tv_myInfo_userName"
         android:layout_width="match_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/bg_my_card_search_history"
+        android:gravity="center"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp"
         android:paddingTop="5dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="5dp"
+        android:text="这是我的领券历史"
         android:textColor="@color/white"
+        android:textSize="18sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_myInfo_userName" />
+
     <Button
         android:id="@+id/btn_myinfo_unregister"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_my_info_btn_login"
-        android:text="点我退出！"
         android:layout_width="match_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginTop="20dp"
-        android:paddingTop="5dp"
-        android:textSize="20sp"
-        android:paddingBottom="5dp"
-        android:textColor="@color/white"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/bg_my_info_btn_login"
+        android:gravity="center"
         android:paddingStart="10dp"
+        android:paddingTop="5dp"
         android:paddingEnd="10dp"
+        android:paddingBottom="5dp"
+        android:text="点我退出！"
+        android:textColor="@color/white"
+        android:textSize="20sp"
 
-        app:layout_constraintBottom_toBottomOf="@+id/btn_myinfo_login"
-        app:layout_constraintTop_toTopOf="@+id/tv_myInfo_userName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_myInfo_coupon_history" />
 
     <Button
         android:id="@+id/btn_myinfo_login"
