--- a/app/src/main/res/layout/item_ticket_history.xml
+++ b/app/src/main/res/layout/item_ticket_history.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+   android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:orientation="horizontal"
     android:background="@drawable/bg_ticket_history"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <ImageView
+        android:padding="5dp"
+        android:scaleType="fitXY"
         android:id="@+id/iv_ticket_history"
         android:src="@mipmap/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
     <TextView
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:layout_marginLeft="10dp"
         android:id="@+id/tv_ticket_history"
         android:gravity="center"
         android:text="这是你的领券记录"
